--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feedback UI</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script defer src="index.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container" id="container">
-        <h1 class="heading">Feedback UI</h1>
-        <div class="ratings-container" id="ratings-container">
-            <div class="rating">
-                <img src="https://cdn-icons-png.flaticon.com/512/166/166527.png" alt="Smale">
-                <small>Unhappy</small>
-            </div>
-            <div class="rating">
-                <img src="https://cdn-icons-png.flaticon.com/512/1791/1791385.png" />
-                <small>Neutral</small>
-              </div>
-              <div class="rating">
-                <img src="https://cdn-icons-png.flaticon.com/512/166/166538.png" />
-                <small>Satisfied</small>
-              </div>
+      <h1 class="heading">Feedback UI</h1>
+      <div class="ratings-container" id="ratings-container">
+        <div class="rating">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/166/166527.png"
+            alt="Smale"
+          />
+          <small>Unhappy</small>
         </div>
-        <button class="btn" id="btn">Send Review</button>
+        <div class="rating">
+          <img src="https://cdn-icons-png.flaticon.com/512/1791/1791385.png" />
+          <small>Neutral</small>
+        </div>
+        <div class="rating">
+          <img src="https://cdn-icons-png.flaticon.com/512/166/166538.png" />
+          <small>Satisfied</small>
+        </div>
+      </div>
+      <button class="btn" id="btn">Send Review</button>
     </div>
-</body>
+  </body>
 </html>
